--- a/bb/index.html
+++ b/bb/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Breakin Bread Bakery</title>
+	<title>Boule Bakery</title>
+  <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -14,289 +14,287 @@
       <![endif]-->
       <!-- Custom CSS  -->
       <link rel="stylesheet" type="text/css" href="css/custom.css">
-  </head>
+    </head>
+    <body>
+     <!-- Navigation -->
+     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+      <div class="container topnav">
+       <!-- Brand and toggle get grouped for better mobile display -->
+       <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+         <span class="sr-only">Toggle navigation</span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+       </button>
+       <a class="navbar-brand topnav" href="#">Boule Bakery</a>
+     </div>
+     <!-- Collect the nav links, forms, and other content for toggling -->
+     <div class="collapse navbar-collapse" id="navbar">
+      <ul class="nav navbar-nav navbar-right">
+       <li>
+        <a href="#phil">Philosophy</a>
+      </li>
+      <li>
+        <a href="#menu">Menu</a>
+      </li>
+      <li>
+        <a href="#gallery">Gallery</a>
+      </li>
+      <li>
+        <a href="#loc">Location &amp; Hours</a>
+      </li>
+    </ul>
+  </div>
+  <!-- /.navbar-collapse -->
+</div>
+<!-- /.container -->
+</nav>
+<!--Page Content-->
+<div class="container-fluid" id="banner">
+  <div class="row">
+   <h1>Boule Bakery</h1>
+   <p>Artisanal Baked Goods</p>
+   <p>est. 1989</p>
+ </div>
+</div>
+<div class="container-fluid content" id="phil">
+  <h1>Our Philosophy</h1>
+  <div class="row">
+   <div class="col-sm-5">
+    <img src="img/baker.jpeg" class="img-circle" />
+  </div>
+  <div class="col-sm-7">
+    <p>
+      Since 1989, Boule Bakery has been dedicated to the craft of making the finest baked goods around. Owner BAKER'S NAME has been in the business since 1970. We use only the highest-quality flours, sugar, cage-free eggs, and hormone-free dairy in our goods. Visit us for your next special occasion!
+    </p>
+  </div>
+</div>
+</div>
+<div class="container-fluid" id="menu">
+  <div class="row">
+   <div class="col-sm-12">
+    <div class="row">
+     <h1>Menu</h1>
+     <h2>Breads</h2>
+   </div><!--close row-->
+ </div>
+ <div class="row">
+  <div class="col-sm-4">
+   <h4>Baguette</h4> 3.80
+ </div>
+ <div class="col-sm-4">
+   <h4>Multigrain</h4>
+   <ul>
+    <li>Whole 9.90</li>
+    <li>Half 4.90</li>
+    <li>Boule 4.35</li>
+  </ul>
+</div>
+<div class="col-sm-4">
+ <h4>Orange Brioche</h4>
+ <ul>
+  <li>Whole 10.00</li>
+  <li>Half 5.00</li>
+</ul>
+</div>
+</div><!--close row-->
+<div class="row">
+  <div class="col-sm-4">
+   <h4>Potato</h4> 5.40
+ </div>
+ <div class="col-sm-4">
+   <h4>Milk Bread</h4>
+   <ul>
+    <li>Whole 8.80</li>
+    <li>Half 4.40</li>
+  </ul>
+</div>
+<div class="col-sm-4">
+ <h4>Burger Buns</h4>
+ <ul>
+  <li>Dozen 6.50</li>
+  <li>Half dozen 3.25</li>
+  <li>Per bun 1.00</li>
+</ul>
+</div>
+</div><!--close row-->
+<div class="row">
+  <div class="col-sm-4">
+   <h4>Ciabatta</h4>
+   <ul>
+    <li>Plain 4.10 (4.50 dozen rolls)</li>
+    <li>Porcini and Sage 4.95 (4.85 dozen rolls)</li>
+    <li>Garlic 4.95 (4.85 dozen rolls)</li>
+  </ul>
+</div>
+<div class="col-sm-4">
+ <h4>Rye</h4>
+ <ul>
+  <li>Plain 6.00 (Half 3.00)</li>
+  <li>Onion 7.00 (3.50 half)</li>
+  <li>Sour Cherry 7.00</li>
+</ul>
+</div>
+<div class="col-sm-4">
+ <h4>Levain (Sourdough)</h4>
+ <ul>
+  <li>Whole Loaf 9.80 Half Loaf 4.90 Boule 4.35</li>
+  <li>Fruitopia 5.60</li>
+  <li>Black Olive and Goat Cheese 5.75</li>
+  <li>Rosemary Boule 4.65</li>
+</ul>
+</div>
+</div><!--close row, end Breads section-->
+<div class="col-sm-12">
+  <h2>Pastries &amp; Sweets</h2>
+</div>
+<div class="row">
+  <div class="col-sm-4">
+   <h4>Brioche Buns</h4> 3.25
+   <ul>
+    <li>Nutella</li>
+    <li>Plum</li>
+    <li>Lemon</li>
+    <li>Cherry</li>
+  </ul>
+</div>
+<div class="col-sm-4">
+  <h4>Croissants</h4>
+  <ul>
+    <li>Plain 3.00</li>
+    <li>Almond 3.25</li>
+    <li>Chocolate 3.50</li>
+    <li>Pistachio 3.25</li>
+  </ul>
+</div>
+<div class="col-sm-4">
+  <h4>Danish</h4> 3.00
+  <ul>
+    <li>Apple</li>
+    <li>Cheese</li>
+    <li>Cherry</li>
+    <li>Peach</li>
+  </ul>
+</div>
+</div><!--close row-->
+<div class="row">
+  <div class="col-sm-4">
+   <h4>Cookies</h4> 2.25
+   <ul>
+    <li>Chocolate Chip</li>
+    <li>Oatmeal Raisin</li>
+    <li>Peanut Butter Chocolate Chip</li>
+  </ul>
+</div>
+<div class="col-sm-4">
+ <h4>Macaroons</h4> 2.45
+ <ul>
+  <li>Caramel Coconut</li>
+</ul>
+</div>
+<div class="col-sm-4">
+ <h4>Scones</h4> 3.00
+ <ul>
+  <li>Blueberry</li>
+  <li>Cranberry Orange</li>
+  <li>Cherry Lime</li>
+  <li>Apricot Fig</li>
+</ul>
+</div>
+</div><!--close row-->
+<div class="row">
+  <div class="col-sm-4">
+    <h4>Brownies</h4> 2.50
+  </div>
+  <div class="col-sm-4">
+   <h4>Muffins</h4> 3.00
+   <ul>
+    <li>Blueberry with Almonds</li>
+  </ul>
+</div>
+<div class="col-sm-4">
+  <h4>Cinnamon Bun</h4> 3.25
+</div>
+</div><!--close row-->
+<div class="row">
+  <div class="col-sm-4">
+   <h4>Sticky Buns</h4> 3.75
+ </div>
+ <div class="col-sm-4">
+   <h4>Ham &amp; Cheese Croissant</h4> 3.75
+ </div>
+ <div class="col-sm-4">
+   <h4>Turkey Bacon Croissant</h4> 3.75
+   <ul>
+    <li>2 pieces</li>
+  </ul>
+</div>
+</div>
+<div class="row">
+  <div class="col-sm-4">
+   <h4>Fig Bar Shortbread</h4> 2.45
+ </div>
+ <div class="col-sm-4">
+   <h4>Pistachio Shortbread</h4> 2.45
+ </div>
+ <div class="col-sm-4">
+   <h4>Mexican Cheese Bombs</h4> 3.00
+ </div>
+</div>
+</div>
+</div>
+</div>
+<div class="container-fluid content" id="gallery">
+ <div class="col-sm-12">
+  <h1>Gallery</h1>
+</div>
+<div class="row">
+  <div class="col-lg-3 col-md-4 col-xs-6">
+   <img class="img-responsive thumb" src="img/cookie.jpg" />
+ </div>
+ <div class="col-lg-3 col-md-4 col-xs-6">
+   <img class="img-responsive thumb" src="img/croissant-2.jpg" />
+ </div>
+ <div class="col-lg-3 col-md-4 col-xs-6">
+   <img class="img-responsive thumb" src="img/loaf.jpeg" />
+ </div>
+ <div class="col-lg-3 col-md-4 col-xs-6">
+   <img class="img-responsive thumb" src="img/cinnaroll.jpeg" />
+ </div>
 
-  <body>
-  	<!-- Navigation -->
-  	<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-  		<div class="container topnav">
-  			<!-- Brand and toggle get grouped for better mobile display -->
-  			<div class="navbar-header">
-  				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
-  					<span class="sr-only">Toggle navigation</span>
-  					<span class="icon-bar"></span>
-  					<span class="icon-bar"></span>
-  					<span class="icon-bar"></span>
-  				</button>
-  				<a class="navbar-brand topnav" href="#">Breakin Bread</a>
-  			</div>
-  			<!-- Collect the nav links, forms, and other content for toggling -->
-  			<div class="collapse navbar-collapse" id="navbar">
-  				<ul class="nav navbar-nav navbar-right">
-  					<li>
-  						<a href="#phil">Philosophy</a>
-  					</li>
-  					<li>
-  						<a href="#menu">Menu</a>
-  					</li>
-  					<li>
-  						<a href="#gallery">Gallery</a>
-  					</li>
-  					<li>
-  						<a href="#loc">Location &amp; Hours</a>
-  					</li>
-  				</ul>
-  			</div>
-  			<!-- /.navbar-collapse -->
-  		</div>
-  		<!-- /.container -->
-  	</nav>
-  	<!--Page Content-->
-  	<div class="container-fluid" id="banner">
-  		<div class="row">
-  			<h1>Breakin Bread Bakery</h1>
-  			<p>Artisanal Baked Goods</p>
-  		</div>
-  	</div>
-  	<div class="container-fluid content" id="phil">
-  		<h1>Our Philosophy</h1>
-  		<div class="row">
-  			<div class="col-sm-5">
-  				<img src="http://placehold.it/200x200" class="img-circle" />
-  			</div>
-  			<div class="col-sm-7">
-  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  				</p>
-  			</div>
-  		</div>
-  	</div>
-  	<div class="container-fluid" id="menu">
-  		<div class="row">
-  			<div class="col-sm-12">
-  				<div class="row">
-  					<h1>Menu</h1>
-  					<h2>Breads</h2>
-  				</div><!--close row-->
-  			</div>
-  			<div class="row">
-  				<div class="col-sm-4">
-  					<h4>Baguette</h4> 3.80
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Multigrain</h4>
-  					<ul>
-  						<li>Whole 9.90</li>
-  						<li>Half 4.90</li>
-  						<li>Boule 4.35</li>
-  					</ul>
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Orange Brioche</h4>
-  					<ul>
-  						<li>Whole 10.00</li>
-  						<li>Half 5.00</li>
-  					</ul>
-  				</div>
-  			</div><!--close row-->
-  			<div class="row">
-  				<div class="col-sm-4">
-  					<h4>Potato</h4> 5.40
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Milk Bread</h4>
-  					<ul>
-  						<li>Whole 8.80</li>
-  						<li>Half 4.40</li>
-  					</ul>
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Burger Buns</h4>
-  					<ul>
-  						<li>Dozen 6.50</li>
-  						<li>Half dozen 3.25</li>
-  						<li>Per bun 1.00</li>
-  					</ul>
-  				</div>
-  			</div><!--close row-->
-  			<div class="row">
-  				<div class="col-sm-4">
-  					<h4>Ciabatta</h4>
-  					<ul>
-  						<li>Plain 4.10 (4.50 dozen rolls)</li>
-  						<li>Porcini and Sage 4.95 (4.85 dozen rolls)</li>
-  						<li>Garlic 4.95 (4.85 dozen rolls)</li>
-  					</ul>
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Rye</h4>
-  					<ul>
-  						<li>Plain 6.00 (Half 3.00)</li>
-  						<li>Onion 7.00 (3.50 half)</li>
-  						<li>Sour Cherry 7.00</li>
-  					</ul>
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Levain (Sourdough)</h4>
-  					<ul>
-  						<li>Whole Loaf 9.80 Half Loaf 4.90 Boule 4.35</li>
-  						<li>Fruitopia 5.60</li>
-  						<li>Black Olive and Goat Cheese 5.75</li>
-  						<li>Rosemary Boule 4.65</li>
-  					</ul>
-  				</div>
-  			</div><!--close row, end Breads section-->
-  			<div class="col-sm-12">
-  				<h2>Pastries &amp; Sweets</h2>
-  			</div>
-  			  			<div class="row">
-  				<div class="col-sm-4">
-  					<h4>Brioche Buns</h4> 3.25
-  					<ul>
-  						<li>Nutella</li>
-  						<li>Plum</li>
-  						<li>Lemon</li>
-  						<li>Cherry</li>
-  					</ul>
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Brownies</h4> 2.50
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Cinnamon Bun</h4> 3.25
-  				</div>
-  			</div><!--close row-->
-  			<div class="row">
-  				<div class="col-sm-4">
-  					<h4>Cookies</h4> 2.25
-  					<ul>
-  						<li>Chocolate Chip</li>
-  						<li>Oatmeal Raisin</li>
-  						<li>Peanut Butter Chocolate Chip</li>
-  					</ul>
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Croissants</h4>
-  					<ul>
-  						<li>Plain 3.00</li>
-  						<li>Almond 3.25</li>
-  						<li>Chocolate 3.50</li>
-  						<li>Pistachio 3.25</li>
-  					</ul>
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Danish</h4> 3.00
-  					<ul>
-  						<li>Apple</li>
-  						<li>Cheese</li>
-  						<li>Cherry</li>
-  						<li>Peach</li>
-  					</ul>
-  				</div>
-  			</div><!--close row-->
-  			<div class="row">
-  				<div class="col-sm-4">
-  					<h4>Macaroons</h4> 2.45
-  					<ul>
-  						<li>Caramel Coconut</li>
-  					</ul>
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Muffins</h4> 3.00
-  					<ul>
-  						<li>Blueberry with Almonds</li>
-  					</ul>
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Scones</h4> 3.00
-  					<ul>
-  						<li>Blueberry</li>
-  						<li>Cranberry Orange</li>
-  						<li>Cherry Lime</li>
-  						<li>Apricot Fig</li>
-  					</ul>
-  				</div>
-  			</div>
-  			<div class="row">
-  				<div class="col-sm-4">
-  					<h4>Sticky Buns</h4> 3.75
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Ham &amp; Cheese Croissant</h4> 3.75
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Turkey Bacon Croissant</h4> 3.75
-  					<ul>
-  						<li>2 pieces</li>
-  					</ul>
-  				</div>
-  			</div>
-  			<div class="row">
-  				<div class="col-sm-4">
-  					<h4>Fig Bar Shortbread</h4> 2.45
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Pistachio Shortbread</h4> 2.45
-  				</div>
-  				<div class="col-sm-4">
-  					<h4>Mexican Cheese Bombs</h4> 3.00
-  				</div>
-  			</div>
-  		</div>
-  	</div>
-  </div>
-  <div class="container-fluid content" id="gallery">
-  	<div class="col-sm-12">
-  		<h1>Gallery</h1>
-  		<h4><em>Coming Soon</em></h4>
-  	</div>
-  	<div class="row">
-  		<div class="col-lg-3 col-md-4 col-xs-6">
-  			<img class="img-responsive thumb" src="http://placehold.it/400x300" />
-  		</div>
-  		<div class="col-lg-3 col-md-4 col-xs-6">
-  			<img class="img-responsive thumb" src="http://placehold.it/400x300" />
-  		</div>
-  		<div class="col-lg-3 col-md-4 col-xs-6">
-  			<img class="img-responsive thumb" src="http://placehold.it/400x300" />
-  		</div>
-  		<div class="col-lg-3 col-md-4 col-xs-6">
-  			<img class="img-responsive thumb" src="http://placehold.it/400x300" />
-  		</div>
-  	</div>
-  </div>
-  <div class="container-fluid" id="loc">
-  	<h1>Location &amp; Hours</h1>
-  	<div class="row">
-  		<div class="col-sm-6">
-  			<h4>Address &amp; Phone</h4>
-  			4351 Main Street<br />
-  			Philadelphia, PA 19127<br />
-  			<span class="glyphicon glyphicon-earphone"></span> 267.323.2321
-  			<h4>Hours</h4>
-  			Thursday and Sunday 8 am - 6 pm</br />
-  			Friday and Saturday 8 am - 5 pm<br />
-  			Closed Monday - Wednesday<br />
-  			<h3><a href="http://www.yelp.com/biz/breakin-bread-bakery-philadelphia" target="_blank">Visit us on Yelp</a></h3>
-  				<div class="centerBlock">
-  					<div id="yelpwidget"></div>
-  				</div>
-  		</div>
-  		<div class="col-sm-6">
-  			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3055.225742469205!2d-75.22588968511836!3d40.025739087250436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b8956f2fd2d5%3A0x7e7f461b2c58e81f!2sBreakin+Bread+Bakery!5e0!3m2!1sen!2sus!4v1463085227986" width="400" height="300" frameborder="0" style="border:0" allowfullscreen=""></iframe>
-  		</div>
-  	</div>
-  </div>
-  <div class="col-sm-12" id="footer">
-  	&copy; 2016 Breakin Bread Bakery<br /> 4351 Main Street, Philadelphia, PA 19127<br /> (267) 323-2321
-  </div>
-  <script src="js/jquery-3.0.0.js"></script>
-  <script type="text/javascript" src="js/smoothscroll.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script>(function() { var s = document.createElement("script");s.async = true;s.onload = s.onreadystatechange = function(){getYelpWidget("breakin-bread-bakery-philadelphia","300","RED","y","n","0");};s.src='http://chrisawren.com/widgets/yelp/yelpv2.js' ;var x = document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s, x);})();</script>
+</div><!--close row-->
+</div><!--close gallery-->
+<div class="container-fluid" id="loc">
+ <h1>Location &amp; Hours</h1>
+ <div class="row">
+  <div class="col-sm-6">
+   <h4>Address &amp; Phone</h4>
+   1234 Main Street<br />
+   Darby, PA 19023<br />
+   <span class="glyphicon glyphicon-earphone"></span> 555.323.2321
+   <h4>Hours</h4>
+   Thursday and Sunday 8 am - 6 pm</br />
+   Friday and Saturday 8 am - 5 pm<br />
+   Closed Monday - Wednesday<br />
+   <h3><a href="http://www.yelp.com/biz/breakin-bread-bakery-philadelphia" target="_blank">Visit us on Yelp</a></h3>
+   <div class="centerBlock">
+     <div id="yelpwidget"></div>
+   </div>
+ </div>
+ <div class="col-sm-6">
+   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3059.8163802536606!2d-75.26789924940168!3d39.92312519333456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c3e607f92761%3A0x22d9eec4153981f2!2s1234+Main+St%2C+Darby%2C+PA+19023!5e0!3m2!1sen!2sus!4v1471367664982" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+ </div>
+</div>
+</div>
+<div class="col-sm-12" id="footer">
+ &copy; 2016 Boule Bakery<br /> 1234 Main Street, Darby, PA 19023<br /> (555) 323-2321
+</div>
+<script src="js/jquery-2.2.4.min.js"></script>
+<script type="text/javascript" src="js/smoothscroll.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+
+<script>(function() { var s = document.createElement("script");s.async = true;s.onload = s.onreadystatechange = function(){getYelpWidget("breakin-bread-bakery-philadelphia","300","RED","y","n","0");};s.src='http://chrisawren.com/widgets/yelp/yelpv2.js' ;var x = document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s, x);})();</script>
 </body>
 </html>
