--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="col-md-6" id="bio">
             <p>I am a UX/UI designer with a love for front-end development.
               My background includes: Startup Institute New York's Web Design Track, a BA in Psychology from Bryn Mawr College, and experience in non-profit development and education.</p>
-              <p>When not at my computer, you can find me staring at the night sky, mixing new bath &amp; body products in my kitchen, lounging in Korean saunas, nose deep in a book on the subway, or biking around the city.</p>
+              <p>When not at my computer, you can find me staring at the night sky, mixing new bath &amp; body products in my kitchen, nose deep in a book on the subway, or biking around the city.</p>
               <p>Currently, I am available for freelance and full-time opportunities. Interested in working with me? <a href="#contact">Contact me</a> for more information!</p>
               <a href="MartinezUXResume.pdf" target="_blank">VIEW FULL RESUME &gt;&gt;</a>
             </div>
