--- a/bb/index.html
+++ b/bb/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Boule Bakery</title>
   <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -53,8 +54,8 @@
 <div class="container-fluid" id="banner">
   <div class="row">
    <h1>Boule Bakery</h1>
-   <p>Artisanal Baked Goods</p>
-   <p>est. 2010</p>
+   <p>Artisanal Baked Goods <br />
+   est. 2010</p>
  </div>
 </div>
 <div class="container-fluid content" id="phil">
@@ -63,9 +64,9 @@
    <div class="col-sm-5">
     <img src="img/baker.jpeg" class="img-circle" />
   </div>
-  <div class="col-sm-7">
+  <div class="col-sm-7 bio">
     <p>
-      Since 2010, Boule Bakery has been dedicated to the craft of making the finest baked goods around. Owner Linda Pan has been baking ever since she got an Easy Bake Oven as a child, and is a graduate of the Institute of Culinary Education. We use only the highest-quality flours, sugar, cage-free eggs, and hormone-free dairy in our goods. Visit us for your next special occasion!
+      Since 2010, Boule Bakery has been dedicated to the craft of making the finest baked goods around. Owner Linda Pan is a graduate of the Institute of Culinary Education and has been a baker ever since she got an Easy Bake Oven as a child. We use only the highest-quality flours, sugar, cage-free eggs, and hormone-free dairy in our goods. Visit us for your next special occasion!
     </p>
   </div>
 </div>
@@ -122,23 +123,23 @@
   <div class="col-sm-4">
    <h4>Ciabatta</h4>
    <ul>
-    <li>Plain 4.10 (4.50 dozen rolls)</li>
-    <li>Porcini and Sage 4.95 (4.85 dozen rolls)</li>
-    <li>Garlic 4.95 (4.85 dozen rolls)</li>
+    <li>Plain 4.10</li>
+    <li>Porcini and Sage 4.95</li>
+    <li>Garlic 4.95</li>
   </ul>
 </div>
 <div class="col-sm-4">
  <h4>Rye</h4>
  <ul>
-  <li>Plain 6.00 (Half 3.00)</li>
-  <li>Onion 7.00 (3.50 half)</li>
+  <li>Plain 6.00 (3.00 Half)</li>
+  <li>Onion 7.00 (3.50 Half)</li>
   <li>Sour Cherry 7.00</li>
 </ul>
 </div>
 <div class="col-sm-4">
  <h4>Levain (Sourdough)</h4>
  <ul>
-  <li>Whole Loaf 9.80 Half Loaf 4.90 Boule 4.35</li>
+  <li>Whole Loaf 9.80 &bull; Half Loaf 4.90 &bull; Boule 4.35</li>
   <li>Fruitopia 5.60</li>
   <li>Black Olive and Goat Cheese 5.75</li>
   <li>Rosemary Boule 4.65</li>
@@ -250,23 +251,17 @@
 </div>
 <div class="row">
   <div class="col-lg-3 col-md-4 col-xs-6">
-    <a href="#myToggle" class="panel">
-     <img class="img-responsive thumb" src="img/cookie.jpg" />
-   </a>
-   <div id="myToggle" class="cap-overlay hide">
-    <h5>Cookies</h5>
-  </div>
-</div>
-<div class="col-lg-3 col-md-4 col-xs-6">
- <img class="img-responsive thumb" src="img/croissant-2.jpg" />
-</div>
-<div class="col-lg-3 col-md-4 col-xs-6">
- <img class="img-responsive thumb" src="img/loaf.jpeg" />
-</div>
-<div class="col-lg-3 col-md-4 col-xs-6">
- <img class="img-responsive thumb" src="img/cinnaroll.jpeg" />
-</div>
-
+   <img class="img-responsive thumb" src="img/cookie.jpg" />
+ </div>
+ <div class="col-lg-3 col-md-4 col-xs-6">
+   <img class="img-responsive thumb" src="img/croissant-2.jpg" />
+ </div>
+ <div class="col-lg-3 col-md-4 col-xs-6">
+   <img class="img-responsive thumb" src="img/loaf.jpeg" />
+ </div>
+ <div class="col-lg-3 col-md-4 col-xs-6">
+   <img class="img-responsive thumb" src="img/cinnaroll.jpeg" />
+ </div>
 </div><!--close row-->
 </div><!--close gallery-->
 <div class="container-fluid" id="loc">
@@ -281,9 +276,9 @@
    Thursday and Sunday 8 am - 6 pm</br />
    Friday and Saturday 8 am - 5 pm<br />
    Closed Monday - Wednesday<br />
-   <h3><a href="http://www.yelp.com/biz/breakin-bread-bakery-philadelphia" target="_blank">Visit us on Yelp</a></h3>
+   <h3><a href="#">Visit us on Yelp</h3>
    <div class="centerBlock">
-     <img src="img/yelp-2c.png" />
+     <img src="img/yelp-2c.png" /></a>
    </div>
  </div>
  <div class="col-sm-6">
