--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
           <div class="row">
             <div class="col-sm-4 col-md-4">
               <div class="thumbnail">
+                <a href="http://www.arielemartinez.com/bb" target="_blank">
+                  <img src="img/boule.png" class="img-responsive" />
+                </a>
+                <div class="caption">
+                  <h4>Boule Bakery</h4>
+                  <p>UX/UI Design, Front-End Development</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4 col-md-4">
+              <div class="thumbnail">
                 <a href="http://www.thepolishedreview.com" target="_blank">
                   <img src="img/polirevi.png" class="img-responsive" />
                 </a>
@@ -97,6 +108,19 @@
                 </div>
               </div>
             </div>
+          </div><!--end row-->
+          <div class="row"><!--begin row-->
+            <div class="col-sm-4 col-md-4">
+              <div class="thumbnail">
+                <a href="http://www.arielemartinez.com/cheese" target="_blank">
+                  <img src="img/sammies.png" class="img-responsive" />
+                </a>
+                <div class="caption">
+                  <h4>Cheese Sammies</h4>
+                  <p>UX/UI Design, Front-End Development</p>
+                </div>
+              </div>
+            </div>
             <div class="col-sm-4 col-md-4">
               <div class="thumbnail">
                 <a href="img/bm-01.png" data-lightbox="beermenus" data-title="Customizable Tap Takeover Design">
@@ -108,20 +132,6 @@
                 <div class="caption">
                   <h4>Beer Menus</h4>
                   <p>Print &amp; Graphic Design</p>
-                </div>
-              </div>
-            </div>
-
-          </div><!--end row-->
-          <div class="row">
-            <div class="col-sm-4 col-md-4">
-              <div class="thumbnail">
-                <a href="http://www.arielemartinez.com/cheese" target="_blank">
-                  <img src="img/sammies.png" class="img-responsive" />
-                </a>
-                <div class="caption">
-                  <h4>Cheese Sammies</h4>
-                  <p>UX/UI Design, Front-End Development</p>
                 </div>
               </div>
             </div>
@@ -144,14 +154,14 @@
         <script src="js/smoothscroll.js"></script>
         <script src="js/lightbox.js"></script>
         <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-85550507-1', 'auto');
-  ga('send', 'pageview');
+        ga('create', 'UA-85550507-1', 'auto');
+        ga('send', 'pageview');
 
-</script>
+        </script>
       </body>
       </html>
