--- a/process-outline.html
+++ b/process-outline.html
@@ -47,18 +47,19 @@
       </nav>
 
       <div class="jumbotron">
-        <h1>Campus Perks Case Study</h1>
+        <h1>CAMPUS PERKS CASE STUDY</h1>
       </div>
       <!--ABOUT-->
       <div class="container-fluid" id="about">
-        <h1><a href="http://www.arielemartinez.com/cp/">View Website</a></h1>
-        <h1>Problem/Project</h1>
+        <a href="http://www.arielemartinez.com/cp/" target="_blank" class="site-demo">View Website</a>
+        <h1>Overview</h1>
         <div class="row">
           <div class="col-md-6">
-            <img src="http://placehold.it/200/200" class="img-responsive img-circle" />
+            <h4>Creating visuals and a landing page for CampusPerks</h4>
           </div>
           <div class="col-md-6">
             <p>
+              <em>Client</em>: CampusPerks, an on-demand tutoring service 
               <em>Roles</em>: UX/UI design + front-end development - page styling, logo design, graphics and movie editing, typography, lo- and hi-fidelity mockups, content.
             </p>
           </div>
@@ -66,23 +67,13 @@
       </div>
       <div class="container-fluid" id="portfolio">
           <h1>Process</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>In order to set our site apart from those of the other tutoring services available, we needed striking visuals and copy.</p>
       </div>
           <!--CONTACT-->
       <div class="container-fluid">
             <h1>RESULTS</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+            <p>Responsive landing page with video background</p>
+            <p><a href="http://www.arielemartinez.com/cp">View Demo Site</a></p>
             <a href="#">Previous Project: XXXXX</a><a href="#">Next Project: XXXXXX</a>
       </div>
             <!--FOOTER-->
