--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Ariele Martinez - UX/UI Design &amp; Front-End Development</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Palanquin:100" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet" type="text/css">
   <link href="css/lightbox.css" rel="stylesheet">
@@ -63,7 +64,7 @@
           </div>
           <div class="col-md-6" id="bio">
             <p>I am a UX/UI designer with a love for front-end development.
-              My background includes: Startup Institute New York's Web Design Track, a BA in Psychology from Bryn Mawr College, and experience in non-profit development and education.</p>
+              My background includes Startup Institute New York's Web Design Track, a BA in Psychology from Bryn Mawr College, and experience in non-profit development and education.</p>
               <p>When not at my computer, you can find me staring at the night sky, mixing new bath &amp; body products in my kitchen, nose deep in a book on the subway, or biking around the city.</p>
               <p>Currently, I am available for freelance and full-time opportunities. Interested in working with me? <a href="#contact">Contact me</a> for more information!</p>
               <a href="MartinezUXResume.pdf" target="_blank">VIEW FULL RESUME &gt;&gt;</a>
@@ -142,7 +143,7 @@
         <!--CONTACT-->
         <div class="container-fluid" id="contact">
           <h1>Contact</h1>
-          <p>Think we'd be a good fit? Do you have a burning question? Just want to say hello? Get in touch via e-mail at acmartine[at]gmail.com. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign" target="_blank">&#64;arielebydesign</a> or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.</p>
+          <p>Think we'd be a good fit? Do you have a burning question? Just want to say hello? Email me at acmartine[at]gmail.com and I'll get back to you ASAP. You can also find my chronicles on Twitter as <a href="http://www.twitter.com/arielebydesign" target="_blank">&#64;arielebydesign</a> or connect with me on <a href="http://www.linkedin.com/in/arielemartinez" target="_blank">LinkedIn</a>.</p>
         </div>
         <!--FOOTER-->
         <div class="footer">
