--- a/process-outline.html
+++ b/process-outline.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Campus Perks Case Study &bull; Ariele Martinez, UX/UI Design</title>
+  <title>BeerMenus Case Study &bull; Ariele Martinez, UX/UI Design</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Palanquin:100" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -47,33 +47,48 @@
       </nav>
 
       <div class="jumbotron">
-        <h1>CAMPUS PERKS CASE STUDY</h1>
+        <h1>BeerMenus Case Study</h1>
       </div>
       <!--ABOUT-->
-      <div class="container-fluid" id="about">
-        <a href="http://www.arielemartinez.com/cp/" target="_blank" class="site-demo">View Website</a>
+      <div class="container-fluid process-cont" id="about">
         <h1>Overview</h1>
-        <div class="row">
-          <div class="col-md-6">
-            <h4>Creating visuals and a landing page for CampusPerks</h4>
-          </div>
-          <div class="col-md-6">
+            <p>Designing custom point-of-sale (POS) materials for BeerMenus, a startup company that provides beer retailers with inventory management and in-store menu display solutions.</p>
+            <h1>Problem</h1>
+            <p>
+              Many beer retailers lack in-house design teams and the capacity to generate their own marketing materials. Our goal was to create customizable graphics for retailers to download and use to drive customers to their BeerMenus pages. Many of these businesses had expressed their frustration of not having marketing materials available and came to BeerMenus seeking a solution.
+            </p>
             <p>
               <em>Client</em>: CampusPerks, an on-demand tutoring service 
+            </p>
+            <p>
               <em>Roles</em>: UX/UI design + front-end development - page styling, logo design, graphics and movie editing, typography, lo- and hi-fidelity mockups, content.
             </p>
-          </div>
-        </div>
       </div>
-      <div class="container-fluid" id="portfolio">
+      <div class="container-fluid process-cont" id="portfolio">
+          <h1>Audience</h1>
+          <p>Target users were patrons who consume beer. What kind of beer drinkers? Patrons who enjoy beer and who may be potential new users of BeerMenus.</p>
+          <h1>Team &amp; Role</h1>
+          <p>I worked with fellow members of Startup Institute's Fall 2015 cohort on a 4-person team made up of a marketer, two developers, and myself as the designer.</p>
+          <h1>Constraints</h1>
+          <p>Our project was short-term, lasting only a few weeks. BM was also undergoing a visual redesign at the time, which required constant communication regarding the changing creative guidelines for generating these graphics.<p>
           <h1>Process</h1>
           <p>In order to set our site apart from those of the other tutoring services available, we needed striking visuals and copy.</p>
+          <p>We visited some establishments in-person and asked managers and owners about their potential use(s) for inventory management like BeerMenus.</p>
+          <p>After discussion on which media were ideal for the POS materials, we decided that table tents, coasters, and posters would be the most-viewed materials in restaurants and retailers.</p>
+          <p>Needed to consider the colors, especially since many bars and restaurants have low lighting. We needed a design that would catch the eye in all light settings. I was responsible for designing the table tents and Tap Takeover poster.</p>
+          <p>We also needed to add in copy that would drive patrons to visit the establishments' profiles on BeerMenus. Specifically, we wanted patrons to keep up to date with the establishment's individual inventory.</p>
       </div>
           <!--CONTACT-->
-      <div class="container-fluid">
+      <div class="container-fluid process-cont">
             <h1>RESULTS</h1>
-            <p>Responsive landing page with video background</p>
-            <p><a href="http://www.arielemartinez.com/cp">View Demo Site</a></p>
+            <p></p>
+            <!-- lightbox here? -->
+            <p>Tap Takeover Poster</p>
+            <img src="img/bm-01.png" />
+            <p>Table Tents</p>
+            <img src="img/bm-02.png" />
+            <img src="img/bm-03.png" />
+            <img src="img/bm-04.png" />
             <a href="#">Previous Project: XXXXX</a><a href="#">Next Project: XXXXXX</a>
       </div>
             <!--FOOTER-->
